﻿Revision history for Dist-Zilla-PluginBundle-Author-KENTNL

2.020004 2014-09-23T17:07:27Z

2.020003 2014-09-23T14:54:27Z
 [Dependencies::Stats]
 - Dependencies changed since 2.020002, see misc/*.deps* for details
 - develop: ↑1
 - runtime: ↑1

 [Minting]
 - Minted dist.ini's don't default to wrong twitter hash tag syntax.

2.020002 2014-09-20T21:00:28Z
 [Dependencies::Stats]
 - Dependencies changed since 2.020001, see misc/*.deps* for details
 - develop: ↑8
 - runtime: ↑12
 - test: ↑2

 [Utils]
 - dep_changes: Enable LMDB Backend as an option.
 - dep_changes: Cleanup CHI code to be more efficient and understandable.
 - dep_changes: Be more graceful about 'releases' branch being missing.

2.020001 2014-09-06T03:22:12Z
 [Bugfix]
 - dont set git_versions in new dists.
 - add dump_config to MinimumPerl

 [Dependencies::Stats]
 - Dependencies changed since 2.020000, see misc/*.deps* for details
 - develop: ↑7
 - runtime: +1 ↑10
 - test: ↑1 (recommends: ↑1)

 [Metadata]
 - Specifiy an email address for copyright holder.

2.020000 2014-08-20T15:50:05Z
 [00 Major]
 - 'git_versions' is now both optional, and an ignored parameter.
 - 'normal_form' is now optional, and defaults to 'numify'
 - 'mantissa' is now optional, and defautls to 6.
 - Discrepancies with any of the above will be offloaded into the RecommendChanges plugin.

 [Dependencies::Stats]
 - Dependencies changed since 2.019000, see misc/*.deps* for details
 - develop: ↑1
 - runtime: ↑1

2.019000 2014-08-18T03:48:49Z
 [00 Minor]
 - Test and dependency recommendation adjustments.
 - no code changes.

 [Dependencies::Noteworthy]
 - Cpanel::JSON::XS and JSON::MaybeXS now in runtime.recommends instead of JSON{,::XS}

 [Dependencies::Stats]
 - Dependencies changed since 2.018000, see misc/*.deps* for details
 - develop: ↑2
 - runtime: ↑2 (recommends: +2 -2)
 - test: -1

 [Tests]
 - Tests no longer require parsing JSON manually to validate themselves and instead just read distmeta.

2.018000 2014-08-16T21:56:32Z