@@ -74,7 +74,7 @@
             "Dist::Zilla::Plugin::Test::Perl::Critic" : "2.112410",
             "Dist::Zilla::Plugin::Test::ReportPrereqs" : "0.019",
             "Dist::Zilla::Plugin::TestRelease" : "5.020",
-            "Dist::Zilla::Plugin::Twitter" : "0.025",
+            "Dist::Zilla::Plugin::Twitter" : "0.026",
             "Dist::Zilla::Plugin::UploadToCPAN" : "5.020",
             "Pod::Coverage::TrustPod" : "0.100003",
             "Test::CPAN::Changes" : "0.30",
@@ -149,7 +149,7 @@
             "Dist::Zilla::Plugin::MetaTests" : "5.020",
             "Dist::Zilla::Plugin::MetaYAML" : "5.020",
             "Dist::Zilla::Plugin::MinimumPerl" : "1.003",
-            "Dist::Zilla::Plugin::PerlTidy" : "0.16",
+            "Dist::Zilla::Plugin::PerlTidy" : "0.17",
             "Dist::Zilla::Plugin::PodCoverageTests" : "5.020",
             "Dist::Zilla::Plugin::PodSyntaxTests" : "5.020",
             "Dist::Zilla::Plugin::PodWeaver" : "4.006",
@@ -166,13 +166,13 @@
             "Dist::Zilla::Plugin::Test::Perl::Critic" : "2.112410",
             "Dist::Zilla::Plugin::Test::ReportPrereqs" : "0.019",
             "Dist::Zilla::Plugin::TestRelease" : "5.020",
-            "Dist::Zilla::Plugin::Twitter" : "0.025",
+            "Dist::Zilla::Plugin::Twitter" : "0.026",
             "Dist::Zilla::Plugin::UploadToCPAN" : "5.020",
             "Dist::Zilla::Role::BundleDeps" : "0.002001",
             "Dist::Zilla::Role::FileGatherer" : "5.020",
             "Dist::Zilla::Role::MintingProfile::ShareDir" : "5.020",
             "Dist::Zilla::Role::PluginBundle" : "5.020",
-            "Dist::Zilla::Util::ConfigDumper" : "0.003004",
+            "Dist::Zilla::Util::ConfigDumper" : "0.003006",
             "Dist::Zilla::Util::CurrentCmd" : "0.002001",
             "Dist::Zilla::Util::EmulatePhase" : "1.001001",
             "IO::Socket::SSL" : "1.998",
@@ -308,7 +308,7 @@
          "Dist::Zilla::Plugin::ModuleBuild" : "5.020",
          "Dist::Zilla::Plugin::ModuleBuildTiny" : "0.007",
          "Dist::Zilla::Plugin::ModuleShareDirs" : "5.020",
-         "Dist::Zilla::Plugin::PerlTidy" : "0.16",
+         "Dist::Zilla::Plugin::PerlTidy" : "0.17",
          "Dist::Zilla::Plugin::PodCoverageTests" : "5.020",
          "Dist::Zilla::Plugin::PodSyntaxTests" : "5.020",
          "Dist::Zilla::Plugin::PodWeaver" : "4.006",
@@ -329,13 +329,13 @@
          "Dist::Zilla::Plugin::Test::Perl::Critic" : "2.112410",
          "Dist::Zilla::Plugin::Test::ReportPrereqs" : "0.019",
          "Dist::Zilla::Plugin::TestRelease" : "5.020",
-         "Dist::Zilla::Plugin::Twitter" : "0.025",
+         "Dist::Zilla::Plugin::Twitter" : "0.026",
          "Dist::Zilla::Plugin::UploadToCPAN" : "5.020",
          "Dist::Zilla::Role::BundleDeps" : "0.002001",
          "Dist::Zilla::Role::FileGatherer" : "5.020",
          "Dist::Zilla::Role::MintingProfile::ShareDir" : "5.020",
          "Dist::Zilla::Role::PluginBundle" : "5.020",
-         "Dist::Zilla::Util::ConfigDumper" : "0.003004",
+         "Dist::Zilla::Util::ConfigDumper" : "0.003006",
          "Dist::Zilla::Util::CurrentCmd" : "0.002001",
          "Dist::Zilla::Util::EmulatePhase" : "1.001001",
          "ExtUtils::MakeMaker" : "6.98",
@@ -959,7 +959,7 @@
          {
             "class" : "Dist::Zilla::Plugin::Twitter",
             "name" : "@Author::KENTNL/Twitter",
-            "version" : "0.025"
+            "version" : "0.026"
          },
          {
             "class" : "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled",
