@@ -1,6 +1,15 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.020004
+ [Changed / runtime requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.003004 → 0.003006
+ - Dist::Zilla::Plugin::BumpVersionAfterRelease 0.002 → 0.003
+ - Dist::Zilla::Plugin::MetaData::BuiltWith 1.003000 → 1.003001
+ - Moose 2.1212 → 2.1213
+ - Moose::Util::TypeConstraints 2.1212 → 2.1213
+
+ [Changed / test requires]
+ - Path::Tiny 0.057 → 0.058
 
 2.020003 2014-09-23T14:54:27Z
  [Changed / runtime requires]
