@@ -1,6 +1,11 @@
 ﻿Revision history for Dist-Zilla-PluginBundle-Author-KENTNL
 
 2.020004 2014-09-23T17:07:27Z
+ [Dependencies::Stats]
+ - Dependencies changed since 2.020003, see misc/*.deps* for details
+ - develop: ↑3
+ - runtime: ↑5 (recommends: +2 -2)
+ - test: ↑1 (recommends: ↑1)
 
 2.020003 2014-09-23T14:54:27Z
  [Dependencies::Stats]
